--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 /* General */
-@import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&family=Rubik:ital,wght@0,300..900;1,300..900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300..900;1,300..900&display=swap");
 
 * {
   margin: 0;
@@ -9,7 +9,7 @@
 }
 
 body {
-  font-family: "Roboto";
+  font-family: "Rubik";
   line-height: 1.6;
 }
 
@@ -17,12 +17,12 @@ html {
   scroll-behavior: smooth;
 }
 
-h2 {
-  font-family: "Oswald", sans-serif;
+h1 {
+  font-family: "Outfit", sans-serif;
 }
 
 p {
-  color: rgb(85, 85, 85);
+  color: #3f3f46;
 }
 
 /* Transition */
@@ -147,4 +147,119 @@ nav {
   #hamburger-nav {
     display: flex;
   }
+}
+
+/* Sections */
+
+section {
+  padding-top: 4vh;
+  height: 96vh;
+  margin: 0 10rem;
+  min-height: fit-content;
+}
+
+.section_container {
+  display: flex;
+}
+
+/* Profile section */
+
+#hero {
+  display: flex;
+  justify-content: center;
+  gap: 5rem;
+  height: 80vh;
+}
+
+.section__pic-container {
+  display: flex;
+  height: 400px;
+  width: 400px;
+  margin: auto 0;
+}
+
+.section__text {
+  align-self: center;
+  text-align: center;
+}
+
+.section__text p {
+  font-weight: 500;
+}
+
+.section__text__p1 {
+  text-align: center;
+}
+
+.section__text__p2 {
+  font-size: 1.75rem;
+  margin-bottom: 1rem;
+}
+
+.title {
+  font-size: 3rem;
+  text-align: center;
+}
+
+#socials-container {
+  display: flex;
+  justify-content: center;
+  margin-top: 1rem;
+  gap: 1rem;
+}
+
+/* Icons */
+
+.icon {
+  cursor: pointer;
+  height: 2rem;
+}
+
+/* Buttons */
+
+.btn-container {
+  display: flex;
+  justify-content: center;
+  gap: 1rem;
+}
+
+.btn {
+  font-weight: 600;
+  transition: all 300ms ease;
+  padding: 1rem;
+  width: 8rem;
+  border-radius: 2px;
+}
+
+.btn-color-1,
+.btn-color-2 {
+  border: #7c3aed 0.1rem solid;
+}
+
+.btn-color-1:hover,
+.btn-color-2:hover {
+  cursor: pointer;
+}
+
+.btn-color-1,
+.btn-color-2:hover {
+  background: #7c3aed;
+  color: white;
+}
+
+.btn-color-1:hover {
+  background: #8b5cf6;
+}
+
+.btn-color-2 {
+  background: none;
+  color: #7c3aed;
+}
+
+.btn-color-2:hover {
+  border: #7c3aed 0.1rem solid;
+}
+
+.btn-container {
+  gap: 1rem;
 }
