--- a/style.css
+++ b/style.css
@@ -423,11 +423,26 @@ i {
   .skills {
     flex-wrap: wrap;
   }
+}
 
+@media only screen and (max-width: 480px) {
   .section__pic-container {
     display: flex;
-    height: 400px;
-    width: 400px;
-    margin: auto 10vw;
+    justify-content: center;
+  }
+
+  .hero-pic {
+    width: 300px;
+    height: 300px;
+  }
+  .contact-container {
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .contact-detail {
+    display: flex;
+    flex-direction: column;
   }
 }
