--- a/style.css
+++ b/style.css
@@ -426,15 +426,21 @@ i {
 }
 
 @media only screen and (max-width: 480px) {
+  #hero {
+    gap: 0;
+  }
+
   .section__pic-container {
     display: flex;
     justify-content: center;
+    margin: 0;
   }
 
   .hero-pic {
     width: 300px;
     height: 300px;
   }
+
   .contact-container {
     flex-direction: column;
     align-items: center;
