--- a/style.css
+++ b/style.css
@@ -149,7 +149,15 @@ section {
 
 .section-container {
   display: flex;
-  margin: 0 10vw;
+  flex-direction: column;
+  margin: 1rem 10vw 0;
+  align-items: center;
+}
+
+#skills-subtitle {
+  font-weight: 600;
+  padding-top: 2rem;
+  text-align: center;
 }
 
 /* Hero section */
@@ -248,6 +256,10 @@ section {
   margin-top: 2rem;
   align-items: center;
   justify-content: space-around;
+}
+
+.bio {
+  text-align: justify;
 }
 
 /* Projects section */
